Configuracion para despliegue en la nube
- Dockerfile (build con Maven + Java 21) para contenedor del backend
- CORS configurable por variable de entorno CORS_ALLOWED_ORIGINS
- script sync-upstream.ps1 para traer cambios del equipo